Menu orizzontale fixato pantry

--- a/app/src/main/res/layout/pantry_layout.xml
+++ b/app/src/main/res/layout/pantry_layout.xml
@@ -1,16 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/lightBrown">
 
-    <include
+    <FrameLayout
         android:id="@+id/horizontal_menu"
-        layout="@layout/horizontal_menu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"/>
+    android:layout_height="wrap_content"
+    android:layout_alignParentTop="true"/>
 
     <FrameLayout
         android:id="@+id/vertical_menu"
@@ -18,14 +16,15 @@
         android:layout_height="match_parent"
         android:layout_below="@id/horizontal_menu"
         android:layout_alignParentLeft="true"/>
-    
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/itemList"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_toRightOf="@id/vertical_menu"
-            android:layout_below="@id/horizontal_menu"
-            android:padding="8dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/itemList"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+    android:layout_below="@id/horizontal_menu"
+    android:layout_toRightOf="@id/vertical_menu"
+    android:layout_alignParentBottom="true"
+    android:padding="8dp"/>
 
     <Button
         android:id="@+id/addItemButton"
