--- a/app/src/main/res/layout/horizontal_menu.xml
+++ b/app/src/main/res/layout/horizontal_menu.xml
@@ -17,8 +17,8 @@
 
         <ImageView
             android:id="@+id/homeImage"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:focusable="true"
             android:src="@drawable/home_icon"
             android:layout_marginEnd="10dp"
@@ -35,15 +35,17 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/activityTitle"
         android:layout_width="0dp"
+        android:maxWidth="80dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:fontFamily="@font/funneldisplay_medium"
         android:gravity="end"
-        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_gravity="center_vertical"
         android:textSize="50sp"
         android:text="TextView"
-        android:textColor="@color/black"/>
+        android:textColor="@color/black"
+        android:layout_marginTop="5dp"/>
 </LinearLayout>
