Menu orizzontale fixato e implementazione parziale pantry e shopping list in attesa del databalse

--- a/app/src/main/res/layout/shopping_list_layout.xml
+++ b/app/src/main/res/layout/shopping_list_layout.xml
@@ -5,9 +5,8 @@
     android:orientation="vertical"
     android:background="@color/lightBrown">
 
-    <include
+    <FrameLayout
         android:id="@+id/horizontal_menu"
-        layout="@layout/horizontal_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"/>
