--- a/app/src/main/res/layout/pantry_item_layout.xml
+++ b/app/src/main/res/layout/pantry_item_layout.xml
@@ -17,8 +17,7 @@
         android:maxHeight="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:src="@drawable/home_icon"/>
+        android:layout_marginStart="8dp"/>
 
     <TextView
         android:id="@+id/itemName"
