--- a/app/src/main/res/layout/shopping_item_layout.xml
+++ b/app/src/main/res/layout/shopping_item_layout.xml
@@ -7,16 +7,19 @@
     android:gravity="center_vertical">
 
     <View
-        android:layout_width="5dp"
-        android:layout_height="5dp"
-        android:background="@android:color/black" />
+        android:id="@+id/colorChangeView"
+        android:layout_width="8dp"
+        android:layout_height="8dp"
+        android:background="@color/white"
+        android:clickable="true"/>
 
     <ImageView
         android:id="@+id/itemImage"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="8dp"
-        android:contentDescription="Item Image"/>
+        android:maxWidth="20dp"
+        android:maxHeight="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"/>
 
     <TextView
         android:id="@+id/itemName"
