Fragments liste suitcase e shopping list

--- a/app/src/main/res/layout/suitcase_layout.xml
+++ b/app/src/main/res/layout/suitcase_layout.xml
@@ -18,12 +18,13 @@
         android:layout_below="@id/horizontal_menu"
         android:layout_alignParentLeft="true"/>
 
-    <androidx.recyclerview.widget.RecyclerView
+    <FrameLayout
         android:id="@+id/suitcaseItemList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_toRightOf="@id/vertical_menu"
+        android:layout_height="0dp"
         android:layout_below="@id/horizontal_menu"
+        android:layout_toRightOf="@id/vertical_menu"
+        android:layout_alignParentBottom="true"
         android:padding="8dp" />
 
     <Button
