--- a/app/src/main/res/layout/pantry_item_adder.xml
+++ b/app/src/main/res/layout/pantry_item_adder.xml
@@ -35,6 +35,7 @@
                 android:id="@+id/editTextProductName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:hint="Nome prodotto" />
 
             <TextView
@@ -49,6 +50,7 @@
                 android:id="@+id/spinnerCategory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:layout_marginTop="15dp" />
 
             <TextView
@@ -63,6 +65,7 @@
                 android:id="@+id/editTextExpiryDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:hint="Data di scadenza (DD/MM/YYYY)"
                 android:inputType="date" />
 
