--- a/app/src/main/res/layout/homepage_main.xml
+++ b/app/src/main/res/layout/homepage_main.xml
@@ -144,7 +144,7 @@
             android:gravity="center"
             android:padding="16dp"
             android:layout_marginTop="24dp"
-            android:background="#FFF8EC"
+            android:background="@drawable/border_warning_text"
             android:textSize="16sp"
             android:textColor="#000000"
             android:clickable="false" />
