--- a/app/src/main/res/layout/homepage_main.xml
+++ b/app/src/main/res/layout/homepage_main.xml
@@ -85,9 +85,9 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="vertical"
                 android:background="@drawable/rounded_background"
                 android:gravity="center_vertical"
+                android:orientation="vertical"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp">
 
@@ -95,8 +95,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Dispensa"
-                    android:textSize="35dp"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textSize="35dp" />
             </LinearLayout>
         </LinearLayout>
 
