--- a/app/src/main/res/layout/pantry_layout.xml
+++ b/app/src/main/res/layout/pantry_layout.xml
@@ -26,19 +26,29 @@
         android:layout_alignParentBottom="true"
         android:padding="8dp" />
 
-    <Button
+    <LinearLayout
         android:id="@+id/addItemButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="+"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:orientation="vertical"
         android:gravity="center"
         android:layout_gravity="end"
         android:onClick="addElement"
         android:background="@drawable/rounded_background"
-        android:textColor="@color/lightBrown"
-        android:fontFamily="@font/funneldisplay_bold"
-        android:padding="0dp"
+        android:padding="8dp"
         android:layout_margin="8dp"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+"
+            android:textColor="@color/lightBrown"
+            android:textSize="18sp"
+            android:fontFamily="@font/funneldisplay_bold"
+            android:gravity="center" />
+    </LinearLayout>
+
 </RelativeLayout>
