--- a/app/src/main/res/layout/vertical_menu.xml
+++ b/app/src/main/res/layout/vertical_menu.xml
@@ -1,5 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
@@ -15,21 +13,28 @@
 
         <LinearLayout
             android:id="@+id/categoryList"
-            android:layout_width="wrap_content"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
         </LinearLayout>
     </ScrollView>
 
-    <Button
+    <LinearLayout
         android:id="@+id/addCategory"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="+"
+        android:layout_height="50dp"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="@drawable/add_category_button"
         android:onClick="addCategory"
-        android:background="@drawable/menu_buttons"
-        android:textColor="@color/lightBrown"
-        android:fontFamily="@font/funneldisplay_bold"
-        android:padding="0dp"
-        android:layout_margin="8dp"/>
+        android:padding="0dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+"
+            android:textSize="14sp"
+            android:textColor="@color/lightBrown"
+            android:fontFamily="@font/funneldisplay_bold"/>
+    </LinearLayout>
 </LinearLayout>
