--- a/app/src/main/res/layout/shopping_list_layout.xml
+++ b/app/src/main/res/layout/shopping_list_layout.xml
@@ -28,6 +28,31 @@
         android:padding="8dp" />
 
     <LinearLayout
+        android:id="@+id/shoppingDone"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_gravity="end"
+        android:onClick="addElement"
+        android:background="@drawable/rounded_background"
+        android:padding="8dp"
+        android:layout_margin="8dp"
+        android:layout_toLeftOf="@id/addItemButton"
+        android:layout_alignParentBottom="true"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Spesa fatta"
+            android:textColor="@color/lightBrown"
+            android:textSize="18sp"
+            android:fontFamily="@font/funneldisplay_bold"
+            android:gravity="center" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/addItemButton"
         android:layout_width="90dp"
         android:layout_height="50dp"
