--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="brown">#B17227</color>
     <color name="beige">#EDB96E</color>
     <color name="lightBrown">#FBD39D</color>
+    <color name="orange">#E47621</color>
 </resources>
