--- a/app/src/main/res/layout/pantry_layout.xml
+++ b/app/src/main/res/layout/pantry_layout.xml
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+"
-            android:textColor="@color/lightBrown"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:fontFamily="@font/funneldisplay_bold"
             android:gravity="center" />
