--- a/app/src/main/res/layout/shopping_item_layout.xml
+++ b/app/src/main/res/layout/shopping_item_layout.xml
@@ -79,7 +79,8 @@
                 android:layout_height="wrap_content"
                 android:text="+"
                 android:textSize="20sp"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:layout_marginBottom="5dp"/>
 
         </LinearLayout>
 
