--- a/app/src/main/res/layout/shopping_list_layout.xml
+++ b/app/src/main/res/layout/shopping_list_layout.xml
@@ -35,7 +35,7 @@
         android:gravity="center"
         android:layout_gravity="end"
         android:onClick="addElement"
-        android:background="@drawable/rounded_background"
+        android:background="@drawable/rounded_background_accent"
         android:padding="8dp"
         android:layout_margin="8dp"
         android:layout_toLeftOf="@id/addItemButton"
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Spesa fatta"
-            android:textColor="@color/lightBrown"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:fontFamily="@font/funneldisplay_bold"
             android:gravity="center" />
@@ -71,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+"
-            android:textColor="@color/lightBrown"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:fontFamily="@font/funneldisplay_bold"
             android:gravity="center" />
