--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="beige">#EDB96E</color>
     <color name="lightBrown">#FBD39D</color>
     <color name="orange">#E47621</color>
+    <color name="dark_orange">#CE6615</color>
 </resources>
