suitcase spinner changing but doesnt work

--- a/app/src/main/res/layout/pantry_item_adder.xml
+++ b/app/src/main/res/layout/pantry_item_adder.xml
@@ -37,6 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
+                android:textColorHint="#8E6062"
                 android:fontFamily="sans-serif-condensed"
                 android:hint="Nome prodotto" />
 
@@ -53,7 +54,8 @@
                 android:id="@+id/spinnerCategory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
+                android:textColor="@color/brown"
+                android:textColorHint="#8E6062"
                 android:fontFamily="sans-serif-condensed"
                 android:layout_marginTop="15dp" />
 
@@ -71,6 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
+                android:textColorHint="#8E6062"
                 android:fontFamily="sans-serif-condensed"
                 android:hint="Data di scadenza (DD/MM/YYYY)"
                 android:inputType="date" />
@@ -94,8 +97,9 @@
 
                 <LinearLayout
                     android:id="@+id/buttonDecreaseQuantity"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginEnd="20dp"
                     android:background="@drawable/rounded_background"
                     android:gravity="center"
                     android:orientation="vertical">
@@ -104,7 +108,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="-"
-                        android:textSize="14sp"
+                        android:textSize="35dp"
                         android:textColor="@color/black" />
 
                 </LinearLayout>
@@ -115,7 +119,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="0"
-                    android:textSize="16sp"
+                    android:textSize="35dp"
                     android:textColor="@color/black"
                     android:layout_marginRight="10dp"
                     android:fontFamily="sans-serif-condensed"
@@ -123,8 +127,9 @@
 
                 <LinearLayout
                     android:id="@+id/buttonIncreaseQuantity"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="20dp"
                     android:background="@drawable/rounded_background"
                     android:gravity="center"
                     android:orientation="vertical">
@@ -133,7 +138,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="+"
-                        android:textSize="14sp"
+                        android:textSize="35dp"
                         android:textColor="@color/black" />
 
                 </LinearLayout>
@@ -142,8 +147,8 @@
             <LinearLayout
                 android:id="@+id/buttonAddProduct"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="25dp"
                 android:background="@drawable/rounded_background"
                 android:gravity="center"
                 android:padding="12dp"
@@ -153,9 +158,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Aggiungi Prodotto"
-                    android:textColor="@color/white"
+                    android:textColor="@color/lightBrown"
                     android:fontFamily="sans-serif-condensed-medium"
-                    android:textSize="16sp" />
+                    android:textSize="25dp" />
 
             </LinearLayout>
         </LinearLayout>
