--- a/app/src/main/res/layout/suitcase_item_adder.xml
+++ b/app/src/main/res/layout/suitcase_item_adder.xml
@@ -27,7 +27,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Inserisci un oggetto per la valigia"
+                android:text="Inserisci un prodotto per la tua valigia"
                 android:textSize="30dp"
                 android:fontFamily="sans-serif-condensed-medium"
                 android:textColor="@color/black" />
@@ -37,6 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
+                android:textColorHint="#8E6062"
                 android:fontFamily="sans-serif-condensed"
                 android:hint="Nome prodotto" />
 
@@ -53,8 +54,8 @@
                 android:id="@+id/spinnerCategory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:layout_marginTop="15dp" />
+                android:theme="@style/CustomSpinnerStyle"
+                android:layout_marginTop="15dp"/>
 
 
             <TextView
@@ -70,14 +71,15 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="16dp"
                 android:orientation="horizontal"
                 android:layout_gravity="center_horizontal">
 
                 <LinearLayout
                     android:id="@+id/buttonDecreaseQuantity"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginEnd="20dp"
                     android:background="@drawable/rounded_background"
                     android:gravity="center"
                     android:orientation="vertical">
@@ -86,8 +88,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="-"
-                        android:textSize="14sp"
-                        android:textColor="@color/black" />
+                        android:textSize="35dp"
+                        android:textColor="@color/lightBrown" />
 
                 </LinearLayout>
 
@@ -97,16 +99,17 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="0"
-                    android:textSize="16sp"
+                    android:textSize="35dp"
                     android:textColor="@color/black"
-                    android:fontFamily="sans-serif-condensed"
                     android:layout_marginRight="10dp"
+                    android:fontFamily="sans-serif-condensed"
                     android:layout_marginLeft="10dp"/>
 
                 <LinearLayout
                     android:id="@+id/buttonIncreaseQuantity"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="20dp"
                     android:background="@drawable/rounded_background"
                     android:gravity="center"
                     android:orientation="vertical">
@@ -115,8 +118,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="+"
-                        android:textSize="14sp"
-                        android:textColor="@color/black" />
+                        android:textSize="35dp"
+                        android:textColor="@color/lightBrown" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -124,8 +127,8 @@
             <LinearLayout
                 android:id="@+id/buttonAddProduct"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="25dp"
                 android:background="@drawable/rounded_background"
                 android:gravity="center"
                 android:padding="12dp"
@@ -136,8 +139,8 @@
                     android:layout_height="wrap_content"
                     android:text="Aggiungi Prodotto"
                     android:textColor="@color/white"
-                    android:fontFamily="sans-serif-condensed"
-                    android:textSize="16sp" />
+                    android:fontFamily="sans-serif-condensed-medium"
+                    android:textSize="25dp" />
 
             </LinearLayout>
         </LinearLayout>
