--- a/app/src/main/res/layout/custom_spinner.xml
+++ b/app/src/main/res/layout/custom_spinner.xml
@@ -2,8 +2,8 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/beige"
     android:textColor="@color/black"
-    android:padding="8dp"
     android:textSize="16sp"
-    android:fontFamily="sans-serif-condensed"
-    android:gravity="center_vertical" />
+    android:padding="10dp"
+    android:gravity="center_horizontal"/>
