Implementazione rosso alle scritte a causa delle scadenze

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="lightBrown">#FBD39D</color>
     <color name="orange">#E47621</color>
     <color name="dark_orange">#CE6615</color>
+    <color name="red">#E2350C</color>
 </resources>
